# WoM_desktop

./: .gitignore  Makefile  README.md  console.bat  pyproject.toml  res_main_rc.py
tests/: test_arch_import.py
tests/fixtures/: arch_load.py
wom/GUI/UI/: res_main.qrc  res_main_rc.py
wom/GUI/widgets/: my_pushButton.py
wom/GUI/windows/: FramelessWindow.py  test.py  win_aggregator.py
wom/almanac/: Almanac.json  Lab_templates.json  Psy_icf_templates.json  Psy_templates.json  diagnosis_dict.py
wom/app_logic/: checking_data.py  copy_archive_case.py  create_docs.py  diagnosis.py  parsing.py  service_func.py  worklist_data_processing.py
wom/app_logic/db_func/: bucket_func.py  bucket_func_users.py  db_bta.py  db_omr.py  db_st_neur_templates.py  db_st_obj_templates.py  drugs_almanac.py  json_recording_case.py  json_templates.py
wom/app_logic/handbooks/: description_of_domains.py  icf_dict.py  icf_full.py  mdrk_data.py  mkb10.json  nmu.json  scale.py
wom/app_logic/writing/: lists.py
wom/databases/: bta_database.db  omr_database.db  templates.db
wom/scripts/: show.py  start_app.py
wom/settings/: appointment_lists.py  bta_muscles.py  config.py  dep_bta.py  dep_omr.py  paths.py
wom/styles_qss/: main_styles.py
wom/templates/BTA/: Complex_doc.docx  ВК_БТА.docx  ВК_на_препарат.docx  ВК_продление_ЛН.docx  Выписной_эпикриз.docx  История_болезни_без_согласий.docx  История_болезни_полная.docx  Лист_назначений.docx  Отказ_от_госпитализации.docx  Первичный_осмотр.docx  Протокол_БТА.docx  Согласие_БТА.docx  Согласия.docx  Стат.талон - 1стр (530н).docx  (+6 more)
(+132 files in other folders)
